WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49625
Focus ring in image maps does not take zooming into account
https://bugs.webkit.org/show_bug.cgi?id=49625
Summary
Focus ring in image maps does not take zooming into account
Yael
Reported
2010-11-16 14:42:22 PST
http://trac.webkit.org/changeset/53857
added support for focus rings on imagemaps. The paths that are created for the focus ring do not take zooming into account.
Attachments
Patch.
(47.21 KB, patch)
2010-11-18 06:57 PST
,
Yael
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2010-11-18 06:57:12 PST
Created
attachment 74236
[details]
Patch. Scale the path of the focus ring if pageZoomFactor is not 1.0.
Yael
Comment 2
2010-11-19 06:16:49 PST
Seems like aproblem in the commit queue caused this patch to not build. This is the build error I got: Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 1 ERROR: Working directory has local commits, pass --force-clean to continue. I am going to try again.
WebKit Commit Bot
Comment 3
2010-11-19 08:05:35 PST
Comment on
attachment 74236
[details]
Patch. Clearing flags on attachment: 74236 Committed
r72402
: <
http://trac.webkit.org/changeset/72402
>
WebKit Commit Bot
Comment 4
2010-11-19 08:05:40 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5
2010-11-19 08:50:44 PST
The commit-queue encountered the following flaky tests while processing
attachment 74236
[details]
: animations/dynamic-stylesheet-loading.html accessibility/aria-activedescendant-crash.html Please file bugs against the tests. These tests were authored by
adele@apple.com
,
cfleizach@apple.com
, and
cmarrin@apple.com
. The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug