2010-11-19  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Antonio Gomes.

        Focus ring in image maps does not take zooming into account
        https://bugs.webkit.org/show_bug.cgi?id=49625

        * fast/images/imagemap-focus-ring-zoom.html: Added.
        * platform/mac/fast/images/imagemap-focus-ring-zoom-expected.checksum: Added.
        * platform/mac/fast/images/imagemap-focus-ring-zoom-expected.png: Added.
        * platform/mac/fast/images/imagemap-focus-ring-zoom-expected.txt: Added.
2010-11-19  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Antonio Gomes.

        Focus ring in image maps does not take zooming into account
        https://bugs.webkit.org/show_bug.cgi?id=49625

        Take pageZoomFactor into account when calculating the path of the focus ring.

        Test: fast/images/imagemap-focus-ring-zoom.html

        * html/HTMLAreaElement.cpp:
        (WebCore::HTMLAreaElement::getPath):

git-svn-id: svn://svn.chromium.org/blink/trunk@72402 bbb929c8-8fbe-4397-9dbb-9b2b20218538